--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -125,9 +125,9 @@ The concept of shared stocks was developed following the ratification of the UN 
 
 Most fisheries management is poorly adapted to address species’ shifting distributions because of changing ocean conditions. The effectiveness of fisheries management for transboundary species is challenged by shifts in stocks’ distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of a changing climate on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal variation in their distribution (e.g., migration, reproductive cycle), misalignment between fisheries resources' allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. For example, Pacific salmon species (*Oncorhynchus sp.*), jointly managed by Canada and the U.S., were heavily fished in the early 1990s after a stock shift favored the Alaskan fleet over the Canadian fleet [@Miller:2013iv]. Continuing climate change is expected to exacerbate such patterns [@Pinsky:2018cb; @Sumaila:2011bq]. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the goals set out under the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
 
-Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth system model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries/political entities under a high greenhouse gas emissions scenario (Methods). **We define a ‘stock’ unit as a species shared by neighboring EEZs.** Firthermore, we  developed a Transboundary Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock’s abundance centroid and that of the EEZs that share a given stock (Fig. \@ref(fig:toeFigure1N)). By employing the concept of *time of emergence*, we estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. 1). Such estimation is based on two thresholds representing a 67 and a 95% probability of shift. Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (Methods). This assumes that countries are adapted to the historical sharing, but no country would be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a managed population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
+Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth system model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries/political entities under a high greenhouse gas emissions scenario (Methods). **We define a ‘stock’ unit as a species shared by neighboring EEZs.** Firthermore, we  developed a Transboundary Shift Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock’s abundance centroid and that of the EEZs that share a given stock (Fig. \@ref(fig:toeFigure1N)). By employing the concept of *time of emergence*, we estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. 1). Such estimation is based on two thresholds representing a 67 and a 95% probability of shift. Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (Methods). This assumes that countries are adapted to the historical sharing, but no country would be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a managed population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
 
-```{r toeFigure1N, eval = T,  echo = F, fig.width=14, fig.height=10, fig.pos="H", fig.cap =  "Schematic diagram of the transboundary index (TI) to determine the time of emergence of transboundary stocks from one Exclusive Economic Zone (EEZ) to another. The index is based on the distance between the distributional centroid of the transboundary stock and the geographic centroid of the neighboring EEZ sharing the stock (Top panel). Time of emergence is defined as the first year when the TI overshoots historical values (Bottom panel). Only showing a subset of ensemble members for clarity."}
+```{r toeFigure1N, eval = T,  echo = F, fig.width=14, fig.height=10, fig.pos="H", fig.cap =  "Schematic diagram of the transboundary index (TSI) to determine the time of emergence of transboundary stocks from one Exclusive Economic Zone (EEZ) to another. **Hypothetical distribution range and shape of a shared stock.** The index is based on the distance between the distributional centroid of the transboundary stock and the centroid of the neighboring EEZ sharing the stock (Top panel). Time of emergence is defined as the first year when the TSI overshoots historical values (Bottom panel). Only showing a subset of ensemble members for clarity."}
 
 img <- readPNG("../Figures/Fig1.png")
 grid.raster(img)
@@ -143,7 +143,7 @@ grid.raster(img)
 <!-- In brief, the DBEM algorithm uses historical species distribution and catch, eco-physiology, habitat suitability and spatial population dynamics to project abundance and potential fisheries catches in a $0.5^o$ x $0.5^o$ grid-cell of the world [@Cheung:2010dt; @Cheung:2009ud; @Cheung:2016jd].  -->
 <!-- The DBEM was driven with ten different simulations of the GFDL ESM2M (i.e., a ten-ensemble member simulation) each of them representing a unique atmosphere and ocean state at the start of the simulation [@Dunne:2012bo; @Dunne:2013db; @Frolicher:2020cc]. The simulations were run under historical forcing until 2005, afterwards and until 2100, simulations followed a high greenhouse gas emissions scenario, Representative Concentration Pathway 8.5 (RCP 8.5) [@Riahi:2011dk]. -->
 
-<!-- We then developed a Transboundary Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock’s abundance centroid and that of the EEZs that share a given stock (Fig. \@ref(fig:toeFigure1)A). We used the ten-ensemble-member approach to determine the historical internal variability of the stock (i.e., 1951 to 2005) and apply the concept of *time of emergence*  to determine a shift in a stock’s shared distribution. The time of emergence (i.e., the year a transboundary stocks shifted from its historical distribution) was defined as the first year the index was beyond two standard deviations from the historical internal variability for a 95% probability of "emergence". We also relaxed the results by including a threshold of one standard deviation (i.e., representing a probability of 67% that the index has emerged). -->
+<!-- We then developed a Transboundary Shift Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock’s abundance centroid and that of the EEZs that share a given stock (Fig. \@ref(fig:toeFigure1)A). We used the ten-ensemble-member approach to determine the historical internal variability of the stock (i.e., 1951 to 2005) and apply the concept of *time of emergence*  to determine a shift in a stock’s shared distribution. The time of emergence (i.e., the year a transboundary stocks shifted from its historical distribution) was defined as the first year the index was beyond two standard deviations from the historical internal variability for a 95% probability of "emergence". We also relaxed the results by including a threshold of one standard deviation (i.e., representing a probability of 67% that the index has emerged). -->
 
 <!-- Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (Methods). A threat point is defined as the minimum payoff a player would be willing to receive to cooperate in a game-theoretic model. Here, we define the minimum payoff as two standard deviations from the historical catch proportion (average of 1951 to 2005) that each EEZ had for each stock. This assumes that countries are adapted to the historical sharing, but no country would be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp].  -->
 <!-- Finally, we computed changes in catch proportion that were below the threat point of neighboring EEZs sharing a stock for two time periods relative to the historical proportion: 2030 (2021 and 2040) matching the UN 2030 Agenda and a mid-century timeline (2040 to 2050). -->
@@ -188,7 +188,7 @@ The DBEM was driven by simulated ocean conditions from a ten ensemble member sim
 
 ## Calculating an index of transboundary range shift
 
-We developed a Transboundary Index (TI) to evaluate range shifts in the shared distribution of transboundary stocks under climate change. This index represents the shift in the distribution centroid of a transboundary stock relative to the centroid of neighboring EEZs that share this stock (Fig. \@ref(fig:toeFigure1)). The centroid of a transboundary stock was determined by the average ($\mu$) latitude ($lat_{ts}$) and longitude ($lon_{ts}$) across grid cells within the neighboring EEZs sharing the stock. Therefore,
+We developed a Transboundary Shift Index (TSI) to evaluate range shifts in the shared distribution of transboundary stocks under climate change. This index represents the shift in the distribution centroid of a transboundary stock relative to the centroid of neighboring EEZs that share this stock (Fig. \@ref(fig:toeFigure1)). The centroid of a transboundary stock was determined by the average ($\mu$) latitude ($lat_{ts}$) and longitude ($lon_{ts}$) across grid cells within the neighboring EEZs sharing the stock. Therefore,
 
 \begin{equation}
 \begin{split}
@@ -206,34 +206,34 @@ where $lat_{per}$ and $lon_{per}$ are the latitudes and longitudes of the grid c
 D_{ens} = acos(sin(lat_{eez})*sin(lat_{ts}) + cos(lat_{eez})*cos(lat_{ts})*cos(lon_{eez}-lon_{ts}))
 \end{equation}
 
-where $lat_{eez}$ and $lat_{ts}$ are the latitudes of the EEZ and transboundary stock centroids, respectively, and $lon_{eez}$ and $lon_{ts}$ are associated longitudes. Then, for each year and for each ensemble member between 1951 and 2100 we calculated the transboundary index (TI) as follows:
+where $lat_{eez}$ and $lat_{ts}$ are the latitudes of the EEZ and transboundary stock centroids, respectively, and $lon_{eez}$ and $lon_{ts}$ are associated longitudes. Then, for each year and for each ensemble member between 1951 and 2100 we calculated the transboundary index (TSI) as follows:
 
 \begin{equation}
 \label{eq:six}
-TI =(\frac{D_{A,t}}{sd(D_{A,th})} - \frac{D_{B,t}}{sd(D_{B,th)}})^2
+TSI =(\frac{D_{A,t}}{sd(D_{A,th})} - \frac{D_{B,t}}{sd(D_{B,th)}})^2
 \end{equation}
 
-where $D_A$ and $D_B$ represent the distance between the distribution centroids of a stock and the centroid of the neighboring EEZs (A and B) sharing the stock for each time step from 2006 to 2100 (*t*); and *sd* is the standard deviation of the historical (th, 1951 - 2005) centroid distribution for $D_A$ and $D_B$. The TI was smoothed to a 10-year average to reduce interannual variability [@Frolicher:2016dg] and to match transboundary fisheries management that often integrates a longer time-frame in their consideration.
+where $D_A$ and $D_B$ represent the distance between the distribution centroids of a stock and the centroid of the neighboring EEZs (A and B) sharing the stock for each time step from 2006 to 2100 (*t*); and *sd* is the standard deviation of the historical (th, 1951 - 2005) centroid distribution for $D_A$ and $D_B$. The TSI was smoothed to a 10-year average to reduce interannual variability [@Frolicher:2016dg] and to match transboundary fisheries management that often integrates a longer time-frame in their consideration.
 
 <!-- Removed in response to reviewer 3 -->
-<!-- Thus, a higher TI means that the abundance of a transboundary stock within neighboring EEZs changes beyond historical levels. From the perspective of a state’s fisheries, increasing TI indicates an increase in the challenges to effective management and sustainability of the transboundary stock’s fisheries. In contrast, a decreasing TI suggests that the sharing of the stocks between neighboring EEZs is becoming relatively more stable; a condition that favors effective management and sustainability of the related fisheries. -->
+<!-- Thus, a higher TSI means that the abundance of a transboundary stock within neighboring EEZs changes beyond historical levels. From the perspective of a state’s fisheries, increasing TSI indicates an increase in the challenges to effective management and sustainability of the transboundary stock’s fisheries. In contrast, a decreasing TSI suggests that the sharing of the stocks between neighboring EEZs is becoming relatively more stable; a condition that favors effective management and sustainability of the related fisheries. -->
 
 ## Calculating shifts in the shared distribution of transboundary stocks
 
-Knowing the point in time at which the distribution of a shared stock will diverge from historical variability is important to inform decision makers by when, ideally, climate adaptation plans will need to have been implemented [@Link:2010ei]. To that end, we adopted the concept of time of emergence, commonly applied to multiple oceanic physical and biogeochemical variables [@Rodgers:2015jq; @Keller:2014jv; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev] and defined as the moment in time when a signal (e.g., future anthropogenic trend) emerges from the background noise of natural variability (i.e., historical natural variation) [@Hawkins:2012hc]. The premise behind time of emergence is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background noise of natural climate variability [@Hawkins:2012hc]. The TI’s natural internal variability was estimated from the ensemble members by firstly averaging the TI from 1951 to 2005 and then estimating the variation ($TI_\sigma$) across ensemble members. The TI signal represents the average TI across ensemble members from 2006 to 2100 ($TI_\mu$). We then set a threshold (*tresh*) of $TI_\sigma$ to define the time of emergence of transboundary stocks (See Fig. \@ref(fig:toeFigure1) for a graphical description):
+Knowing the point in time at which the distribution of a shared stock will diverge from historical variability is important to inform decision makers by when, ideally, climate adaptation plans will need to have been implemented [@Link:2010ei]. To that end, we adopted the concept of time of emergence, commonly applied to multiple oceanic physical and biogeochemical variables [@Rodgers:2015jq; @Keller:2014jv; @Cheung:2020ja; @Schlunegger:2020gz; @Schlunegger:2019el; @Henson:2017ev] and defined as the moment in time when a signal (e.g., future anthropogenic trend) emerges from the background noise of natural variability (i.e., historical natural variation) [@Hawkins:2012hc]. The premise behind time of emergence is that we can only be confident that a significant change has been detected when the signal of anthropogenic climate change is larger than the background noise of natural climate variability [@Hawkins:2012hc]. The TSI’s natural internal variability was estimated from the ensemble members by firstly averaging the TSI from 1951 to 2005 and then estimating the variation ($TSI_\sigma$) across ensemble members. The TSI signal represents the average TSI across ensemble members from 2006 to 2100 ($TSI_\mu$). We then set a threshold (*tresh*) of $TSI_\sigma$ to define the time of emergence of transboundary stocks (See Fig. \@ref(fig:toeFigure1) for a graphical description):
 
-<!-- We then set a threshold of two times $TI_\sigma$ representing a probability of 95% that the transboundary index has “emerged” from historical variability (See Fig. \@ref(fig:toeFigure1) for a graphical description): -->
+<!-- We then set a threshold of two times $TSI_\sigma$ representing a probability of 95% that the transboundary index has “emerged” from historical variability (See Fig. \@ref(fig:toeFigure1) for a graphical description): -->
 
 
-<!-- $EmergenceTIndex = \frac{\mu_{TI[t]}}{SD_{TI_{th}}}$ -->
+<!-- $EmergenceTSIndex = \frac{\mu_{TSI[t]}}{SD_{TSI_{th}}}$ -->
 <!-- $ToE = t when Emergence index[t] > 1$ -->
 
 \begin{equation}
 \label{eq:seven}
-ToE = TI_\mu[t']> tresh
+ToE = TSI_\mu[t']> tresh
 \end{equation}
 
-This way we define a shift in a stock’s shared distribution (i.e., time of emergence) as the first year the TI “emerges” from historical internal variability (*tresh*). It assumes that, from a fisheries’ perspective, the first year a stock’s distribution shift from a 10-year average is sufficient to call for caution. Two different arbitrary values of *tresh* were used. A conservative value ($tresh = 2* TI_\sigma$) representing a 95% probability that the index has emerged from historical variability and a more relaxed value ($tresh=TI_\sigma$) for a 67% probability.
+This way we define a shift in a stock’s shared distribution (i.e., time of emergence) as the first year the TSI “emerges” from historical internal variability (*tresh*). It assumes that, from a fisheries’ perspective, the first year a stock’s distribution shift from a 10-year average is sufficient to call for caution. Two different arbitrary values of *tresh* were used. A conservative value ($tresh = 2* TSI_\sigma$) representing a 95% probability that the index has emerged from historical variability and a more relaxed value ($tresh=TSI_\sigma$) for a 67% probability.
 
 Since the ToE method is sensitive to the noise estimate (i.e., historical natural variability), we conducted sensitivity analysis where we first calculated the average across the 10 ensemble members for each year between 1951 to 2005 and the calculating the standard deviation over 1950-2005. Under this method, the natural variability is slightly larger resulting in a latter overall time of emergence (average ToE = 2057 vs 2036 of the original method). However, this method projects 1,139 more emerging stocks than the original (5,258 stocks vs 4,119 of the original method). The minimum and maximum ToE remains the same, and the number of EEZs with emerging stocks slightly increases with the alternative method. Further research looking at different approaches of estimating the natural variability component could help reduce the uncertainty in the estimation of the time of emergence of transboundary stocks. 
 
@@ -261,7 +261,7 @@ We tested the results for normality (e.g., skewness, kurtosis) and performed two
 
 ## Identifying range shifts in the shared distribution of transboundary stocks {-}
 
-Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability by 2100 (hereafter referred to as ‘shifts’; Fig. \@ref(fig:toeFigure1)A), using a two s.d. threshold (i.e., representing a probability of 95% that the stock has shifted). This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). Using a less conservative threshold (i.e., one s.d. representing a probability of 67% that the stock has shifted) results in 33% (n = 5,745) more shifting stocks, that is, 67% of all studied stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)). For both cases, the first shift is modelled to have occurred back in 2006. The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be between 2029 $\pm$ 27 years (one s.d. threshold) and 2036 $\pm$ 28 years (two s.d. threshold). Furthermore, between 81% and 83% of the world’s EEZs will experience at least one transboundary stock shift by 2100 with 77% to 80% of EEZs recording a distributional stock shift by the UN 2030 Agenda’s deadline (Fig. \@ref(fig:toeFigure1)C).
+Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability by 2100 (hereafter referred to as ‘shifts’; Fig. \@ref(fig:toeFigure1)A), using a two s.d. threshold (i.e., representing a probability of 95% that the stock has shifted). This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). Using a less conservative threshold (i.e., one s.d. representing a probability of 67% that the stock has shifted) **results in 18% (n = 5,745) more shifting stocks, that is, 63% of all studied stocks** (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)). For both cases, the first shift is modelled to have occurred back in 2006. The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be between 2029 $\pm$ 27 years (one s.d. threshold) and 2036 $\pm$ 28 years (two s.d. threshold). Furthermore, between 81% and 83% of the world’s EEZs will experience at least one transboundary stock shift by 2100 with 77% to 80% of EEZs recording a distributional stock shift by the UN 2030 Agenda’s deadline (Fig. \@ref(fig:toeFigure1)C).
 
 
 
@@ -278,7 +278,7 @@ The median year in which transboundary stocks experience a range shift varied si
 
 <!-- ![toeFigure 2. Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygon shows the contribution of shifting stocks to the country’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons represent average range shifts per EEZ. EEZs with no time of emergence between 2006 and 2100 are represented in aqua color. B) Year of shared distribution shifts by region according to United Nations sub-regions. Points represent the median year of range shift. Horizontal dashed line represents the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand](../Figures/Fig3.png) -->
 
-```{r toeFigure2, eval = T,  echo = F, fig.width  = 13,fig.pos= "H", fig.height =11, fig.cap =  "Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygons show the contribution of shifting stocks to a country or territory’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons display average year of range shifts within them. Warm colors are indicative of an early shift/high fishing revenue contribution from transboundary stocks while cool colors represent a late shift/low fishing revenue. EEZs with no distributional shift between 2006 and 2100 are represented in pale blue. B) Year of shared distribution shifts by UN sub-regions. Points color coded by the median year of range shift. Horizontal dashed line represents the year by which countries have committed to reach full implementation of the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand."}
+```{r toeFigure2, eval = T,  echo = F, fig.width  = 13,fig.pos= "H", fig.height =11, fig.cap =  "Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygons show the contribution of shifting stocks to a country or territory’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons display average year of range shifts within them. Warm colors are indicative of an early shift/high fishing revenue contribution from transboundary stocks while cool colors represent a late shift/low fishing revenue. EEZs with no distributional shift between 2006 and 2100 are represented in pale blue. B) Year of shared distribution shifts by UN sub-regions. Points color coded by the median year for all shifting stocks in the region. Horizontal dashed line represents the year by which countries have committed to reach full implementation of the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand."}
 
 img <- readPNG("../Figures/Fig3.png")
 grid.raster(img)
