Response to the edditor

--- a/Scripts/responses_rev_gcb.Rmd
+++ b/Scripts/responses_rev_gcb.Rmd
@@ -7,7 +7,15 @@ output: pdf_document
 
 Overall, the two reviewers agree that this work tackles an important, but collectively have raised a considerable number of points that will need to be addressed. Of most concern, is that it is not currently clear how this current MS differs from other recent papers that have established methods used on this paper and implications of climate change in the context of transboundary fisheries - including the authors' one works (Sumaila et al. 2020 Ecology and Society, Palacios-Abrantes et al. 2020 Ecology and Society, Pinsky et al. 2018 Science, and Palacios-Abrantes et al. 2020 Scientific Reports). It is important that GCB papers deliver the step change in knowledge that has not been realised elsewhere; therefore' we ask the authors to ensure the paper wholly demonstrates and articulates the transformation achieved in order to progress with the submission.
 
-- **Response:**
+- **Response: PLEASE PAY SPECIAL ATTENTION TO THIS POINT. LOOKS LIKE WE REALLY NEED TO CONVINCE THE EDITOR OUR RESEARCH IS NOVEL**
+
+Below you will find the response to both Reviewers 1 and 2. In addition, we would like to offer here an explanation of how our paper differs from recent published papers, including those authored by some of us.
+
+In their 2018 paper, Pinsky *et al.* look at how many *new* transboundary species each EEZ of the world will have towards the end of the century under climate change (i.e., national stocks that become transboundary stocks). Indeed, the authors find that “many of the world’s EEZs are likely to receive one to 12 new, climate-driven transboundary stocks by the end of the century.” On the other hand, Oremus *et al.* (2020) “estimates the number of species *exiting* national jurisdictions under climate change up to 2100” concluding that tropical nations stand to lose the most species under these scenarios. However, both studies fail to identify changes in *current* transboundary stocks including the intensity of such shift, gap that we look to fill in this paper. Here, we build from Palacios-Abrantes *et al.* (2020) and use the transboundary species (n = 633) identified in such paper. This means that, unlike Pinsky *et al.* (2018) and Oremus *et al.* (2020) who look at national stocks shifting towards new or away from EEZs, our paper focuses on transboundary stocks shifting within EEZs. Moreover, as far as we are concerned no other study, including the research done by us, identifies the actual timeline of shifts in shared stocks, nor the intensity of such shifts.
+
+To identify the timeline we adopt the concept of *Time of Emergence* commonly used in oceanic physical and chemical studies (See Rodgers *et al.* 2015, Keller *et al.* 2014 and has just recently been used in ecological studies by Cheung *et al.* 2020 looking at ecological responses to marine heatwaves. As far as we are concerned, no other study has adopted this methodology to looking at the tyming of shifts in transbounary fisheries. On the other hand, to identify the intensity of the shift, we (partially) used methods developed by Palacios *et al.* and Sumaila *et al* (2020), published in *Ecology and society*. These papers adopt the concept of threat point to evaluate the resilience of specific treaties celebrated by Canada-US tranboundary to manage four transboundary stocks. Here, we take this idea of threat point and expand the analysis globally to estimate the intensity that the shifts in transboundary stocks will have. 
+
+In short, the current manuscript builds upon Palacios-Abrantes *et al.* 2020 *Scientific Reports* combining methods developed in Sumaila *et al.* 2020 and Palacios-Abrantes *et al.* 2020 *Ecology and Society* to address a question that neither Pinsky *et al.* 2018 *Science* nor Oremus *et al.* (2020) *Nature Sust.* addressed. We hope to have clarified the novelty of our research and how it differs from previous studies. The new information that we present here can be critical for fisheries management to adapt to shifts in the distribution of transboundary stocks under climate change as highlighted by both reviewers.
 
 # Reviewer 1
 
