--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -125,7 +125,7 @@ The concept of shared stocks was developed following the ratification of the UN 
 
 Most fisheries management is poorly adapted to address species’ shifting distributions because of changing ocean conditions. The effectiveness of fisheries management for transboundary species is challenged by shifts in stocks’ distribution under climate change [@Pinsky:2018cb; @Pinsky:2014by; @Pinsky:2020jx; @Oremus:2020id]. In most cases, catch or fishing effort quotas for transboundary stocks are based on historical records and do not necessarily consider the full distribution range of the stock [@FredstonHermann:2018kp], nor the effects of a changing climate on fish stocks and associated fisheries [@PalaciosAbrantes:2020tv; @Sumby:2021gw]. While many transboundary stocks experience natural seasonal variation in their distribution (e.g., migration, reproductive cycle), misalignment between fisheries resources' allocation and distributional shifts beyond such natural variation have previously resulted in unsustainable fishing levels and international disputes [@Miller:2013iv; @Spijkers:2017ij; @Crespo:2020cs]. For example, Pacific salmon species (*Oncorhynchus sp.*), jointly managed by Canada and the U.S., were heavily fished in the early 1990s after a stock shift favored the Alaskan fleet over the Canadian fleet [@Miller:2013iv]. Continuing climate change is expected to exacerbate such patterns [@Pinsky:2018cb; @Sumaila:2011bq]. Understanding when climate change will affect the sharing dynamics of transboundary stocks and the intensity of the resulting impacts is important for developing climate resilient international ocean governance and achieving the goals set out under the 2030 Agenda [@Pinsky:2018cb; @Link:2010ei; @Sumaila:2020tp].
 
-Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth system model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries/political entities under a high greenhouse gas emissions scenario (Methods). **We define a ‘stock’ unit as a species shared by neighboring EEZs.** Firthermore, we  developed a Transboundary Shift Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock’s abundance centroid and that of the EEZs that share a given stock (Fig. \@ref(fig:toeFigure1N)). By employing the concept of *time of emergence*, we estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. 1). Such estimation is based on two thresholds representing a 67 and a 95% probability of shift. Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (Methods). This assumes that countries are adapted to the historical sharing, but no country would be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a managed population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
+Here, we employ a mechanistic population dynamic model driven by output from a comprehensive Earth system model with ten ensemble members to project transboundary stocks’ distribution across the 280 EEZs of 198 coastal countries/political entities under a high greenhouse gas emissions scenario (Methods). **We define a ‘stock’ unit as a species shared by neighboring EEZs.** Furthermore, we  developed a Transboundary Shift Index to evaluate range shifts in the shared distribution of transboundary stocks. The index is based on changes in the distance of the stock’s abundance centroid and that of the EEZs that share a given stock (Fig. \@ref(fig:toeFigure1N)). By employing the concept of *time of emergence*, we estimate the year in which the 633 transboundary species (9,132 stocks) are projected to shift their shared distribution beyond historical variations (Fig. 1). Such estimation is based on two thresholds representing a 67 and a 95% probability of shift. Finally, we apply the Game Theory concept of *threat point* [See @Sumaila:2020tp; @Munro:1979dg for its application to fisheries] to quantify the intensity of changes in the shared distribution of transboundary stocks between neighboring EEZs (Methods). This assumes that countries are adapted to the historical sharing, but no country would be willing to collaborate if the future catch proportion of the transboundary stock is lower than it has ever been [@PalaciosAbrantes:2020vt; @Sumaila:2020tp]. We treat each species in an EEZ as a single stock due to the lack of more spatially resolved data to delineate the boundary of a managed population [@PalaciosAbrantes:2020tv] and only consider shared stocks between neighboring EEZs (i.e., excluding the high seas).
 
 ```{r toeFigure1N, eval = T,  echo = F, fig.width=14, fig.height=10, fig.pos="H", fig.cap =  "Schematic diagram of the transboundary index (TSI) to determine the time of emergence of transboundary stocks from one Exclusive Economic Zone (EEZ) to another. **Hypothetical distribution range and shape of a shared stock.** The index is based on the distance between the distributional centroid of the transboundary stock and the centroid of the neighboring EEZ sharing the stock (Top panel). Time of emergence is defined as the first year when the TSI overshoots historical values (Bottom panel). Only showing a subset of ensemble members for clarity."}
 
