REsponded to edditor and to stock question

--- a/Scripts/responses_rev_gcb.Rmd
+++ b/Scripts/responses_rev_gcb.Rmd
@@ -27,40 +27,52 @@ In this work, the authors analyze potential shifts in harvested marine species u
 Major comments:
 I am concerned about the lack of a clear definition of “fish stock” in this manuscript, since it is absolutely central to the analysis. I cannot find where in the manuscript the definition of stocks is laid out. In most literature (and especially in fisheries science), stocks have a specific (if flexible) definition as populations of a species with some degree of demographic isolation from other stocks, such that the population dynamics of separate stocks may be considered independent. In this manuscript, it seems that instead, a transboundary stock is simply defined as any pair of EEZs that share a species distribution. I would recommend that the authors define the precise definition of fish stock explicitly within the manuscript, including how their definition is different from the definition in other, related literature.
 
-- **Response:** Thank you for this comment. We acknowledge that we did not defined clearly pur concept of stock in the previous version of the manuscript. The definition of stock has now been included in the revised manuscript in both the introduction and the methods as follows;
+- **Response:** Thank you for this comment. We acknowledge that we did not defined clearly our concept of stock in the previous version of the manuscript. The definition of stock has now been included in the revised manuscript in both the introduction and the methods as follows;
 
   - Introduction Line XX, *We define a ‘stock’ unit as a species shared by neighboring EEZs.*
 
   - Methods Line XX, *We define a (transboundary) "stock" unit when a species was shared by a pair of neighboring EEZs [@PalaciosAbrantes:2020tv; @Teh:2015gd], resulting in a total of 9,132 transboundary stocks*
 
-
 I have a number of questions and concerns about this approach to stock definition, including: how are neighboring stocks of the same species considered? If, for example, a species’ distribution exists within British Columbia, the United States, and Mexico, is this considered one stock for the purpose of the analyses in the paper (e.g. TI, ToE, SSR), or is this two stocks (one between Canada and the US and one between the US and Mexico)? How does the choice of stock definition influence the calculation of SSR? Given the same sample as above, can the US lose SSR of one stock of a species to Canada, while gaining SSR of the same species from Mexico?
+
+- **Response:** Please see below direct responses to each sub-part of the question.
+
+  How are neighboring stocks of the same species considered? If, for example, a species’ distribution exists within British Columbia, the United States, and Mexico, is this considered one stock for the purpose of the analyses in the paper (e.g. TI, ToE, SSR), or is this two stocks (one between Canada and the US and one between the US and Mexico)?
 
 - **Response:** We acknowledged that this was not fully clear in the previous version of the manuscript and have work towards improving clarity in the revise manuscript. For example, pacific sardine is a species present along the coast of Mexico, the United States (US) and, sometimes, British Columbia (BC) [@cisneros-montemayor_ecosystem-based_2020]. For the purpose of our study, we define two stocks: One that is shared by Mexico and the US and one shared by the US and BC. We have made this explicit in the following section of the methods, hopefully clarifying our definition;
 
     - Methods Line XX, *Let us consider the transboundary species Atlantic cod (*Gadus morhua*) as an example. Atlantic cod's distribution in the Northwest Atlantic ranges from the United States to Greenland. Based on the previous definition of a transboundary stock, the United States and Canada share a stock of Atlantic cod, and Canada and Greenland share a separate stock of Atlantic cod, but the United States and Greenland do not share a stock as they do not have juxtaposing EEZs.* 
-
-    Thus, this definition will influence the calculation of SSR *between* neighboring EEZs (i.e., Mexico and the US SSR for sardine and US and BC SSR for sardine, independently one of another). As the reviewer suggests, in this scenario Mexico could be loosing sardine SSR to the US contiguous states (this can also be seen as the US gaining SSR from Mexico), while the US contiguous states looses sardine SSR to BC (again, this could also be seen as Canada winning SSR from the US contiguous states ). This effect is appreciable in the average SSR gains of Figure 5 where Mexico losses to the US contiguous states, who in turn looses to BC, who actually gains from both US continuous states and Alaska. This is not explain on the methods as follows **NOT SURE WE NEED THIS**;
+    
+    How does the choice of stock definition influence the calculation of SSR? Given the same sample as above, can the US lose SSR of one stock of a species to Canada, while gaining SSR of the same species from Mexico?
+    
+- **Response:** Our definition will influence the calculation of SSR *between* neighboring EEZs (i.e., Mexico and the US SSR for sardine and US and BC SSR for sardine, independently one of another). As the reviewer suggests, in this scenario Mexico could be loosing sardine SSR to the US contiguous states (this can also be seen as the US gaining SSR from Mexico), while the US contiguous states looses sardine SSR to BC (again, this could also be seen as Canada winning SSR from the US contiguous states). This effect is appreciable in the average SSR gains of Figure 5 where Mexico losses to the US contiguous states, who in turn looses to BC, who actually gains from both US continuous states and Alaska. This is now explained on the methods as follows **NOT SURE WE NEED THIS**;
 
     - Line XX, *While this means that a shift in the stocks could happened from the US to Canada and from Canada to Greenland, such shift could not (analytically) go directly from the US to Greenland*
 
-    This way, our definition of a shared stock allows for stocks to go to or leave an EEZ from all borders. Continuing using Mexico as an example, Figure 5 shows how in average Mexico will loose SSR of the stocks it shares with the US up north probably do to a poleward shift on the Californian current species [@cisneros-montemayor_ecosystem-based_2020] but also to the south to Guatemala as stocks follow local environmental gradients [@Clarke:2020ep].
+  How does the choice of stock definition influence the calculation of SSR?
+    
+- **Response:** The definition of "stock" will likely influence the results as it is a fundamental part of the analysis. Replicating this analysis at the species level will undoubtedly result in multiple countries sharing each species. For example, in the case of Atlantic Cod, this would be shared by US, Canada and Greenland (and maybe enven northern Europe). Choosing this approach invariably comes with the assumption that fishing Cod in, e.g., the Gulf of Maine, will have direct impact on e.g., Greenland fisheries. While this might be true for some few highly migratory species (e.g., tunas) we believe is a stretch for all other species in this analysis. 
+  
+  However, even when a stock of non highly-migratory species does span along the coast of more than two countries, our results seem to be similar (this relates to the part regarding Mexico US and Canada). For example, Pacific halibut (*Hippoglossus stenolepis*) is considered to be one single stock that extends along the Pacific coast of the US contiguous states, Canada, and Alaska [@iphc_iphc_2016_report_2016]. Palacios-Abrantes *et al.* (2020) analyzed the shift in SSR between the three parties and found that the US contiguous states will likely loose SSR to Canada while Canada will loose to Alaska. A similar patter shown in the present study.
+  
+    Ideally, one could define a stock as a biologically-defined population. This could be the case of Peruvian anchoveta *(Engraulis ringens)* off the coast of Chile and Peru. There are two identified stocks of anchoveta; one in the central/norther part of the Peruvian EEZ and one in the south, shared with Chile. This differentiation will likely impact both the ToE and SSR results. However, as far as we are concern, such analysis is challenged by a lack of stock-level data around the world. 
 
 The above are just example situations. I do not mean to be nitpicky about definitions, but I am concerned that the definition of stocks used in this manuscript fundamentally determine the top-line results (e.g., number and proportion of shifting stocks, calculation of the transboundary index and time of emergence, loss or gain of SSR, etc. etc.).
 
-  - **Response:** We understand the reviewer's concern and hope that our response have clarified this issue. However, it is almost certain that our definition of stock is influencing the results of our paper, just by tha nature of the analysis. While a more fine scale definition (e.g., biologically-defined populations of stock will probably arose other results, not limiting the species to, at least, an EEZ could result in an overestimation of our results (See Ovando *et al.* https://www.pnas.org/content/118/23/e2025958118).
-
+  - **Response:** We understand the reviewer's concern and hope that our response have clarified this issue. However, it is almost certain that our definition of stock is influencing the results of our paper, just by that nature of the analysis. While a more fine scale definition (e.g., biologically-defined populations of stock will probably arose other results, not limiting the species to, at least, an EEZ could result in an overestimation of our results (See Ovando *et al.* https://www.pnas.org/content/118/23/e2025958118). This is a main caveat of our study and have made an effort to be very clear and upfront about it in line XX of the revised manuscript:
+  
+  - - **Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks, rather than biologically-defined populations. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Moreover, not limiting the species to, at least, an EEZ could result in an overestimation of our results (**NOTE:** See Ovando *et al.* https://www.pnas.org/content/118/23/e2025958118).**
+  
 Further, I am concerned about the averaging and weighting of species that is done across species in this analysis. As one example, why is the geographic centroid (used in the calculation of TI) not weighted by probability of occurrence? Fish stocks are not evenly distributed across their entire range, and unweighted centroids can severely skew the actual distribution of the species. 
 
-- **Response:** We have revised the manuscript to clarify that we did account for the heterogeneous distribution of fish stocks across their entire range. The geographic centroid of each stock is indeed weighted by the abundance of the stock. The DBEM uses the species probability of occurrence to estimate the biomass of the species at each 0.5 x 0.5 gridcell as indicated from lines XX to XX of the methods. The centroid of a transboundary stock was determined by the average latitude and longitude ($lon_{ts}$) of the grid cells holding the specified percentile ($per^{th}$) of the projected transboundary stock abundance. This is, we determined the centroid of the stock using only those regions where abundace is higher (i.e., using the probability of occurrence of the DBEM). It reads as follows:
+- **Response:** We agree with the reviewer that and unweighted centroid can severely skew the actual distribution of the species and influence our results. We have revised the manuscript to clarify that we did account for the heterogeneous distribution of fish stocks across their entire range. The geographic centroid of each stock is indeed weighted by the abundance of the stock. The DBEM uses the species probability of occurrence to estimate the biomass of the species at each 0.5 x 0.5 gridcell as indicated from lines XX to XX of the methods. The centroid of a transboundary stock was determined by the average latitude and longitude ($lon_{ts}$) of the grid cells holding the specified percentile ($per^{th}$) of the projected transboundary stock abundance (see below). This is, we determined the centroid of the stock using only those regions where abundance was higher (i.e., using the probability of occurrence of the DBEM). Moreover, we estimated the sensitivity of our results to the (arbitrarily) $per^{th} = 95^{th}$ percentile threshold as described in lines XX and shown in Figure S6 of the supplements. It reads as follows in line XX:
 
-  - Line, *Fish stocks are not evenly distributed across their entire range, thus we focus on areas where transboundary stocks are more abundant and fishing activities are more likely to take place. Thus, we estimated the centroid of a stock only including grid cells where the projected stock abundance within the neighboring EEZs sharing the stock was above the $95^{th}$ percentile.*
-
-    We agree that and unweighted centroids can severely skew the actual distribution of the species and influence our results. We estimated the sensitivity of our results to the (arbitrarily) $95^{th}$ percentile threshold as described in lines XX and shown in Figure S6 of the supplements. 
+  - Line XX, *Fish stocks are not evenly distributed across their entire range, thus we focus on areas where transboundary stocks are more abundant and fishing activities are more likely to take place. Thus, we estimated the centroid of a stock only including grid cells where the projected stock abundance within the neighboring EEZs sharing the stock was above the $95^{th}$ percentile.*
 
 Weighting comes up again in the analyses that result in Figures 3, 4, and 5. Having one major, valuable species shift rapidly is a much bigger concern for many countries than having many small or low-value stocks shift slowly. These sorts of dynamics, while interesting, are difficult if not impossible to parse from the current Figures. For example, would the arrows look different in Figure 5 if the averages were weighted by each fish stock’s value?
 
-**NOT SURE I UNDERSTAND THIS COMMENT**
+
+
 
 - **Response (INCOMPLETE):** We were not clear in our message and have worked on clarifying all of these results. Specifically, in figure three we are showing the participation of the transboundary stocks that are shifting between neighbouring EEZs relative to the total revenue from all transboundary stocks that each EEZ has. So, for example, the transboundary stocks that are shifting in the Mexican Pacific coast to/from US and Guatemala represent about 15% of Mexico's total revenue from transboundary stocks. They average year of shift is ~2025. Indeed as the reviewer suggests, Figure 4 does not include any weight value, but rather absolute revenue amounts. The figure's objective is not only to inform the reader about the economic importance, in terms of absolute USD, of these shifting transboundary stocks (rather than their weighted value that is presented in Figure 3) but also highlight that these shifts are happening close to the UN 2030 Agenda. Finally, Figure 5 does indeed show weighted values. Here, we are showing the...
 
@@ -97,7 +109,7 @@ Line 79: where is “this study's definition of a transboundary stock?”
 
 Lines 220-226: How does the threat point analysis align with my concerns about the definition of stocks described above? Can an EEZ both lose and gain SSR that exceeds a threshold, but of the same species? If so, this seems misleading.
 
-- **Response:** Thank you for your concern. In short the answer is yes, an EEZ could both lose and gain SSR of the same *species* but not of the same *stock.* This is because, according to our definition of stock, a species who spans multiple EEZs has multiple stocks (see response to the previus question and the main comment). let us use the Peruvian anchoveta (*Engraulis ringens*) as an example.
+- **Response:** Thank you for your concern. In short the answer is yes, an EEZ could both lose and gain SSR of the same *species* but not of the same *stock.* This is because, according to our definition of stock, a species who spans multiple EEZs has multiple stocks (see response to the previous question and the main comment). let us use the Peruvian anchoveta (*Engraulis ringens*) as an example.
 
 Peru has identified two main stocks of Peruvian anchoveta. one in the central/norther part of the EEZ and one in the south, shared with Chile. Although the northern stocks is not considered transboundary [@Cashion:2018cg; @PalaciosAbrantes:2020tv] and Equador hardly ever reports anchoveta landings (wwww.searaundus.org), in some few years, environmental variability has pushed the central/north stock towards the EEZ of Ecuador. In those years one could argue that, the Peruvian anchoveta SSR of Peru-Ecuador favors Ecuador.
 
